Dashboard : Implement Load giphy images

--- a/src/app/route/app/app.style.scss
+++ b/src/app/route/app/app.style.scss
@@ -65,6 +65,7 @@ $sidebar-height: em2px(4em);
     padding: $b-space;
     margin-left: $sidebar-height;
     padding-top: $sidebar-height + em2px($b-space);
+    background-color: #f0f0f0;
   }
 
     // .user-info {
